--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 * {
     margin: 0;
-    padding: 0;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
 }
 
-html, body {
+html,
+body {
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -16,7 +16,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    height: 33vh;
+    height: 25vh;
     background-color: transparent;
     color: white;
     text-align: center;
@@ -31,7 +31,8 @@ header img {
     transition: all 0.3s ease;
 }
 
-header h1, header h3 {
+header h1,
+header h3 {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
@@ -41,20 +42,16 @@ header h1, header h3 {
 }
 
 header h1 {
-    top: 30%;
     font-size: 4rem;
+    top: 10%;
 }
 
 header h3 {
-    position: absolute;
-    top: 70%;
-    left: 50%;
-    transform: translateX(-50%);
-    color: antiquewhite;
     font-size: 2rem;
-    opacity: 1; /* Początkowa widoczność */
-    transition: opacity 0.3s ease; /* Łagodna animacja zanikania */
+    display: block;
+    top: 50%;
 }
+
 
 section {
     width: 60%;
@@ -87,6 +84,7 @@ a:hover {
 
 footer {
     position: fixed;
+    height: 9vh;
     bottom: 0;
     left: 0;
     width: 100%;
@@ -117,4 +115,42 @@ footer {
 .info {
     font-size: 10px;
     color: dimgray;
+}
+
+/* Media Queries */
+@media (max-width: 768px) {
+    header h1 {
+        font-size: 5vw;
+        top: 20%;
+    }
+
+    header h3 {
+        display: none;
+    }
+
+    header {
+        height: 20vh;
+    }
+
+    section {
+        width: 90%;
+        margin-top: 22vh;
+        font-size: 1rem;
+        padding: 10px;
+    }
+
+    main {
+        padding: 20px;
+    }
+
+    footer {
+        padding: 10px;
+        font-size: 1rem;
+    }
+    footer .inlineca{
+        flex-direction: column;
+    }
+    footer p{
+        margin: 5px 0;
+    }
 }
