--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* Ogólne style */
 * {
     margin: 0;
     box-sizing: border-box;
@@ -12,7 +11,6 @@ body {
     flex-direction: column;
 }
 
-/* Style dla header */
 header {
     position: fixed;
     top: 0;
@@ -54,7 +52,6 @@ header h3 {
     top: 50%;
 }
 
-/* Main – zawiera przewijalną treść */
 main {
     flex: 1;
     padding: 50px;
@@ -65,7 +62,6 @@ main {
     position: relative;
 }
 
-/* Kontener tła z moai – ustawiony fixed, by być zawsze w tle */
 #moai-bg {
     position: fixed;
     top: 0;
@@ -76,7 +72,6 @@ main {
     pointer-events: none;
 }
 
-/* Section z treścią – znajduje się na wierzchu tła */
 section {
     position: relative;
     z-index: 1;
@@ -89,7 +84,6 @@ section {
     margin-bottom: 10vh;
 }
 
-/* Style dla spadających emoji */
 .moai {
     position: absolute;
     font-size: 2.5rem;
@@ -109,7 +103,6 @@ section {
     }
 }
 
-/* Pozostałe style */
 a {
     text-decoration: none;
     color: inherit;
@@ -121,6 +114,7 @@ a:hover {
 }
 
 footer {
+    z-index: 10000;
     position: fixed;
     height: 80px;
     bottom: 0;
@@ -155,7 +149,6 @@ footer {
     color: dimgray;
 }
 
-/* Media Queries */
 @media (max-width: 768px) {
     header h1 {
         font-size: 5vw;
